deploy/kubernetes/whoami/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: whoami
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
